<resources>
    <string name="app_name">Store</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="store_list">Store List</string>
    <string name="store_detail">Store Detail</string>
    <string name="result">Result</string>

    <string name="main_menu">Main Menu</string>
    <string name="data">: (data)</string>
    <string name="yes">: Ya</string>
    <string name="find_stores_distributors">Cari Toko/Distributor</string>
    <string name="description">Description</string>
    <string name="total_store">Total\nStore</string>
    <string name="acutal_store">Acutal\nStore</string>
    <string name="precentage">Percentage</string>
    <string name="menu">Menu</string>
    <string name="visit_in">Kunjungan</string>
    <string name="target_install_ncdfdpc">Target Install\nCDFDPC</string>
    <string name="dashboard">Dashboard</string>
    <string name="transmission_history">Transmission\nHistory</string>
    <string name="logout">Logout</string>
    <string name="list_store">List Store</string>
    <string name="user_a">User A</string>
    <string name="no_visit">No Visit</string>
    <string name="visit">Visit</string>
    <string name="reset">Reset</string>
    <string name="toko_b">Toko B</string>
    <string name="outlet_type">Tipe Outlet</string>
    <string name="display_type">Tipe Display</string>
    <string name="display_sub_type">Sub Tipe Display</string>
    <string name="ertm">ERTM</string>
    <string name="e_merchandising">E-Merchandising</string>
    <string name="last_visit">Last Visit</string>
    <string name="pareto">Pareto</string>
    <string name="store_verification">Verifikasi Store</string>

    <string name="dummy_name">Mitha Khairulnisa</string>
    <string name="dummy_nik">NIK : MD00001</string>
    <string name="dummy_role">Role : {…}</string>
    <string name="dummy_title_visit">Kujungan pada bulan Agustus 2020</string>
    <string name="dummy_number">150</string>
    <string name="dummy_percentage">50%</string>
    <string name="dummy_address">Jalan Pal Merah No 25 Jakarta Barat</string>
    <string name="dummy_date">05–09–2018</string>
    <string name="dummy_location_status">Lokasi Belum sesuai</string>

    <string name="error_connection">No Internet Connection</string>
    <string name="error_login">Login tidak berhasil. Periksa kembali username atau password Anda</string>
    <string name="information">Information</string>
    <string name="product_ncheck">Product\nCheck</string>
    <string name="sku_npromo">SKU\nPromo</string>
    <string name="ringkasan_noos">Ringkasan\nOOS</string>
    <string name="store_ninvesment">Store\nInvesment</string>
    <string name="dashbord_store">Dashbord Store</string>
    <string name="perfect_store">Perfect Store</string>
    <string name="osa">OSA</string>
    <string name="target">Target</string>
    <string name="achievement">Pencapaian</string>
    <string name="done">Selesai</string>
    <string name="st0001">ST0001</string>
    <string name="tt_regular_ertm_big_pareto">TT Regular - ERTM Big - Pareto</string>
    <string name="cluster_small">Cluster : Small</string>
    <string name="indomaret_komsen">Indomaret Komsen</string>
    <string name="for_support">Untuk support yang luar biasa di masa-masa covid-19 seperti ini.</string>
    <string name="september_2020">September 2020</string>
    <string name="title_visit_list">List kunjungan 19–08–2020</string>
    <string name="dummy_distance">1m</string>
</resources>